--- a/Huckleberry/style.css
+++ b/Huckleberry/style.css
@@ -13,48 +13,45 @@ body {
 }
 
 .container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
 }
 
-@media (max-width: 768px) {
-  .container {
-    min-height: auto;
-  }
-}
 
-.topp {
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
+.top-title{
+  font-size: 2rem;
 }
 
 .topp-container {
-  max-width: 1000px ;
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: white;
-  border-bottom: 10px solid #999999;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1.875rem;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 415px;
+}
+
+.flex-col p {
+  font-size: 1.25rem;
 }
 
 .bottom {
-  height: 50%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: #666666;
   border-top: 10px solid #999999;
   padding-top: 20px;
-}
-
-@media (max-width: 768px) {
-  .bottom {
-    height: auto;
-  }
 }
 
 .green {
