🐛 Trying to fix body scroll

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     color: white;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 /* Stars effect */
