--- a/WP-Pusher/style.css
+++ b/WP-Pusher/style.css
@@ -38,6 +38,33 @@ nav {
   color: #1d2c3c;
 }
 
+/* Hamburger icon */
+.hamburger {
+  display: none;
+  position: relative;
+  width: 30px;
+  height: 3px;
+  background: #333;
+  cursor: pointer;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 3px;
+  background: #333;
+}
+
+.hamburger::before {
+  transform: translateY(-8px);
+}
+
+.hamburger::after {
+  transform: translateY(8px);
+}
+
 .acc-btn {
   font-weight: 600;
   font-size: 14px;
@@ -60,6 +87,22 @@ main {
   padding-block: 40px;
 }
 
+@media only screen and (max-width: 992px) {
+  nav {
+    padding: 20px;
+  }
+  .menu {
+    display: none;
+  }
+  .main-container {
+    grid-template-columns: 1fr;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
 .form-container {
   /* padding: 3rem; */
   background: #ffffff;
@@ -79,11 +122,6 @@ main {
 .basic-info {
   padding: 3rem;
   border-bottom: 2px solid #f5f7fa;
-}
-
-.freelancer {
-  padding: 3rem;
-  background-color: #1179bf;
 }
 
 .info-header {
@@ -117,6 +155,7 @@ label {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 input,
@@ -132,6 +171,7 @@ select {
 .card-container {
   font-family: system-ui, -apple-system, sans-serif;
   max-width: 600px;
+  margin-top: 20px;
 }
 
 .card-container h2 {
@@ -195,4 +235,158 @@ input:focus {
   font-size: 14px;
   font-weight: 400;
   color: #636b6f;
+}
+
+.help {
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+  margin-block: 20px;
+  max-width: 330px;
+  gap: 10px;
+  margin-inline: auto;
+}
+
+.stripe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-block: 20px;
+  cursor: pointer;
+}
+
+.freelancer {
+  padding: 3rem;
+  background-color: #1179bf;
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 992px) {
+  .freelancer {
+    display: none;
+  }
+}
+
+@media (max-width: 550px) {
+  .form-row {
+    grid-template-columns: 1fr;
+  }
+}
+
+.freelance-title {
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+.currency .currency-num {
+  font-size: 3.75rem;
+}
+
+.currency {
+  font-size: 1.125rem;
+  margin: 0;
+  color: white;
+}
+
+.auto {
+  font-style: italic;
+  color: white;
+
+  margin-top: 10px;
+}
+
+.sign {
+  display: inline-flex;
+  align-items: baseline;
+  gap: 4px;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.currency-num {
+  font-size: 48px;
+  font-weight: 400;
+}
+
+.feature-list {
+  margin-block: 3rem;
+  color: white;
+  max-width: 300px;
+}
+
+.feature-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.feature-item:last-child {
+  margin-bottom: 0;
+}
+
+.checkmark {
+  font-size: 12px;
+  margin-right: 10px;
+  font-weight: 700;
+  color: white;
+  border: 2px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border-radius: 50%;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.feature-text {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+.client-agency {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  opacity: 20.05%;
+  margin-block: 3rem;
+}
+
+.testimonial {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+}
+
+.test-main {
+  font-style: italic;
+  line-height: 1.5rem;
+  font-size: 1.125rem;
+  color: white;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
+.user img {
+  width: 50px;
+  height: 50px;
+}
+
+.user p {
+  color: white;
+  font-weight: 700;
 }
